etc/tests/error/parser/use-trailing-dot-stops.ny
;; expect: expected identifier after '.'
use std.

fn main() { 0 }
main()
